k8s/kurama-redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kurama-redis-ingress
  namespace: kurama-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kurama-redis
      app.kubernetes.io/component: storage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shorturl
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kurama
              app.kubernetes.io/component: manager

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shorturl
          podSelector:
            matchLabels:
              app.kubernetes.io/component: runner
      ports:
        - protocol: TCP
          port: 6379
